# OneTimeNote

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 2ec253cefd5c_add_is_confirmed_column_to_notes.py  6e60c0f0a29d_create_notes_table.py  dd01fa04ce03_initial_migration.py  fcaebe8c74fc_initial_migration.py
documentation/source/: DEVELOPMENT.rst  conf.py  index.rst
tests/: test_note_service.py
web/app/: application.py  config.py  crud.py  database.py  db_setup.py  decorators.py  error_handlers.py  factory.py  init_database.py  logging.py  models.py  note_service.py  rate_limiter.py  routes.py  services.py  wsgi.py
web/static/css/: styles.css
web/static/js/: decrypt.js  encrypt.js
web/templates/: 404.html  base.html  confirm-view-note.html  create-note.html  view-note.html
