[tool.poetry]
name = "onetimenote"
version = "0.1.0"
description = ""
authors = ["himetik <himetik@tutamail.com>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
loguru = "^0.7.3"
flask-limiter = "^3.9.2"
redis = "^5.2.1"
alembic = "^1.14.0"

[tool.poetry.dev-dependencies]
ruff = "^0.8.4"
sphinx = "^8.1.3"
docutils = "^0.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["*.js", "*.html", "*.css"]
