[tool.poetry]
name = "onetimenote"
version = "0.1.0"
description = ""
authors = ["himetik <himetik@tutamail.com>"]
license = "MIT license"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
ruff = "^0.8.4"
loguru = "^0.7.3"
flask-limiter = "^3.9.2"
redis = "^5.2.1"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["*.js", "*.html", "*.css"]
